solution : added all codes

--- a/Easy/Question One/index.html
+++ b/Easy/Question One/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="counter-holder"></div>
+    <button id="increase-btn">Increase</button>
+    <button id="decrease-btn">Decrease</button>
 </body>
 <script src="/Easy/Question One/script.js"></script>
 </html>
