directory fix : different folders

--- a/Easy/Question One/Vanilla JS/index.html
+++ b/Easy/Question One/Vanilla JS/index.html
@@ -11,5 +11,5 @@
     <button id="increase-btn">Increase</button>
     <button id="decrease-btn">Decrease</button>
 </body>
-<script src="/Easy/Question One/script.js"></script>
+<script src="/Easy/Question One/Vanilla JS/script.js"></script>
 </html>
