feat : added solutions

--- a/Medium/Question One/index.html
+++ b/Medium/Question One/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" id="input-area" maxlength="5">
+    <button id="submit-btn">Btn</button>
 </body>
 <script src="/script.js"></script>
 </html>
